--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "back-end demo app for Apollo's lift-off course",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index"
+    "start": "nodemon src/index"
   },
   "dependencies": {
     "apollo-datasource-rest": "^3.7.0",
